--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,10 +18,14 @@ html {
   color: var(--c-text-1);
   background-color: var(--c-bg);
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
   min-height: 100vh;
+  overflow-x: hidden;
+  width: 100%;
+  max-width: 100vw;
 }
 
 img, picture, video, canvas, svg {
